--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <hr />
           <p>
             Don't miss out on the release of our new NFT. Sign up below to
-            receive updates.
+            receive updates
           </p>
           <div class="container">
             <button class="btn"> Sign Up</button>
@@ -186,7 +186,7 @@
           </ul>
         </div>
       </div>
-      <p class="copyright">Copyright &copy; 2022 NFTlanding</p>
+      <p style="align-items: center;"class="copyright">Copyright &copy; 2022 NFTlanding</p>
     </footer>
   </body>
 </html>
